Your commit message here

--- a/Mission08/Views/Home/AddTask.cshtml
+++ b/Mission08/Views/Home/AddTask.cshtml
@@ -20,10 +20,10 @@
     <div class="form-group">
         <label asp-for="Quadrant">Quadrant:</label>
         <select asp-for="Quadrant" class="form-control">
-            <option value="1">Quadrant 1</option>
-            <option value="2">Quadrant 2</option>
-            <option value="3">Quadrant 3</option>
-            <option value="4">Quadrant 4</option>
+            <option value="1">Quadrant 1:  Important / Urgent</option>
+            <option value="2">Quadrant 2:  Important / Not Urgent</option>
+            <option value="3">Quadrant 3:  Not Important / Urgent</option>
+            <option value="4">Quadrant 4:  Important / Not Urgent</option>
         </select>
         <div class="invalid-feedback" asp-validation-for="Quadrant"></div>
     </div>
