--- a/Mission08/Views/Home/Index.cshtml
+++ b/Mission08/Views/Home/Index.cshtml
@@ -1,1 +1,5 @@
-﻿
+﻿<div class="text-center">
+    <h1 class="display-4">Welcome to the Task Manager!</h1>
+    <p>Manage your tasks efficiently and focus on what truly matters.</p>
+    <p>Using the principles from <em>The 7 Habits of Highly Effective People</em> by Stephen Covey.</p>
+</div>
