--- a/Mission08/Views/Home/Edit.cshtml
+++ b/Mission08/Views/Home/Edit.cshtml
@@ -23,17 +23,19 @@
     </div>
 
     <div class="form-group">
+        <!-- Dropdown for selecting the Quadrant -->
         <label asp-for="Quadrant">Quadrant:</label>
         <select asp-for="Quadrant" class="form-control">
-            <option value="1">Quadrant 1</option>
-            <option value="2">Quadrant 2</option>
-            <option value="3">Quadrant 3</option>
-            <option value="4">Quadrant 4</option>
+            <option value="1">Quadrant 1: Important / Urgent</option>
+            <option value="2">Quadrant 2: Important / Not Urgent</option>
+            <option value="3">Quadrant 3: Not Important / Urgent </option>
+            <option value="4">Quadrant 4: Not Important / Not Urgent</option>
         </select>
         <div class="invalid-feedback" asp-validation-for="Quadrant"></div>
     </div>
 
     <div class="form-group">
+        <!-- Dropdown for the Category, dynamically references db -->
         <label asp-for="CategoryId">Category:</label>
         <select asp-for="CategoryId" class="form-control">
             @foreach (var category in ViewBag.Categories)
